--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 <body>
-
+<div class="container">
     <img class="fimg" src="./img/block.png" alt="">
     <div class="simg">
      
@@ -201,6 +201,6 @@
         </ul>
     </div>
 </footer>
-
+</div>
 </body>
 </html>
